third_party/move/move-compiler-v2/tests/cyclic-instantiation-checker/v1-tests/complex_1.exp

Diagnostics:
error: cyclic type instantiation: a cycle of recursive uses causes a type to grow without bound
   ┌─ tests/cyclic-instantiation-checker/v1-tests/complex_1.move:13:9
   │
13 │     fun c<T1, T2>() {
   │         ^
   │
   = `c<T1, T2>` uses `d<T2>` at tests/cyclic-instantiation-checker/v1-tests/complex_1.move:15
   = `d<T2>` uses `b<u64, T2>` at tests/cyclic-instantiation-checker/v1-tests/complex_1.move:20
   = `b<u64, T2>` uses `c<S<T2>, bool>` at tests/cyclic-instantiation-checker/v1-tests/complex_1.move:10

error: cyclic type instantiation: a cycle of recursive uses causes a type to grow without bound
   ┌─ tests/cyclic-instantiation-checker/v1-tests/complex_1.move:26:9
   │
26 │     fun f<T>() {
   │         ^
   │
   = `f<T>` uses `g<T>` at tests/cyclic-instantiation-checker/v1-tests/complex_1.move:27
   = `g<T>` uses `f<S<T>>` at tests/cyclic-instantiation-checker/v1-tests/complex_1.move:31

error: cyclic type instantiation: a cycle of recursive uses causes a type to grow without bound
   ┌─ tests/cyclic-instantiation-checker/v1-tests/complex_1.move:30:9
   │
30 │     fun g<T>() {
   │         ^
   │
   = `g<T>` uses `f<S<T>>` at tests/cyclic-instantiation-checker/v1-tests/complex_1.move:31
   = `f<S<T>>` uses `g<S<T>>` at tests/cyclic-instantiation-checker/v1-tests/complex_1.move:27
